Atualizaçoes pequenas no bot, algumas ajuste q estavam pendentes